syntax = "proto3";

package crud;

option go_package = "pkg/grpc";

service Editor {
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
}

message GetPostsRequest{
  repeated int32 posts_id = 1;
}

message GetPostsResponse{
  repeated GetPostByIdResponse posts = 1;
}


message GetPostByIdRequest{
  int32 id = 1;
}

message GetPostByIdResponse{
  int32 id = 1;
  int32 user_id = 2;
  string title = 3;
  string body = 4;
}

message DeletePostRequest{
  int32 id = 1;
}
message DeletePostResponse{
  string status = 1;
}

message UpdatePostRequest{
  int32 id = 1;
  int32 user_id = 2;
  string title = 3;
  string body = 4;
}

message UpdatePostResponse{
  string status = 1;
}

